--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: 3
+version: "3"
 
 services:
   web:
@@ -6,11 +6,5 @@ services:
     restart: always
     build: .
     ports: 
-      -"5000:9000"
-    links: 
-      - mongo
-  mongo:
-    container_name: mongodb
-    image: mongo
-    ports:
-      -"27018:27017"
+      - "5000:9000"
+
