--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,16 @@
 version: "3"
 
 services:
-  web:
+  web1:
     container_name: ejemplonode
     restart: always
     build: .
     ports: 
       - "5000:9000"
+  web2:
+    container_name: ejemplonode
+    restart: always
+    build: .
+    ports: 
+      - "6000:9000"
 
